--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-img
-{ max-height:10%;
-  max-width:10%;
-}
 </style>
 <body class="w3-light-grey">
 
@@ -19,7 +15,7 @@ img
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
   <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
   <span class="w3-bar-item w3-right">
-    <img src="logo.png",alt="TCET logo">
+    <img src="logo.png" style="max-width:10%;max-height:10%">
   </span>
 </div>
 
@@ -27,7 +23,7 @@ img
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container w3-row">
     <div class="w3-col s4">
-      <img src="/w3images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px">
+      <img src="avatar.png" class="w3-circle w3-margin-right" style="width:46%">
     </div>
     <div class="w3-col s8 w3-bar">
       <span>Welcome, <strong>Aakash</strong></span><br>
